--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 python_version = "3.7"
 
 [packages]
+urllib3 = ">=1.26.5"
 pyyaml = ">=4.21b"
 jira = {version = ">= 2.0.0, < 2.1"}
 tqdm = "*"
